--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,54 @@
-# Included because many Paas's require a requirements.txt file in the project root
-# Just installs the production requirements.
--r requirements/prod.txt
+alembic==0.7.6
+backports.ssl-match-hostname==3.4.0.2
+beautifulsoup4==4.3.2
+blinker==1.3
+certifi==2015.4.28
+cssmin==0.2.0
+Factory==1.2
+factory-boy==2.5.1
+Flask==0.10.1
+Flask-Admin==1.1.0
+Flask-Assets==0.10
+Flask-Bcrypt==0.6.2
+Flask-Cache==0.13.1
+Flask-DebugToolbar==0.9.2
+Flask-Login==0.2.11
+Flask-Migrate==1.3.1
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.0
+Flask-WTF==0.11
+functools32==3.2.3.post1
+gnureadline==6.3.3
+gunicorn==19.3.0
+ipython==3.1.0
+itsdangerous==0.24
+Jinja2==2.7.3
+jsmin==2.1.1
+jsonschema==2.5.1
+Mako==1.0.1
+MarkupSafe==0.23
+matplotlib==1.4.3
+mock==1.0.1
+nose==1.3.7
+numpy==1.9.2
+psycopg2==2.6
+py==1.4.28
+Pygments==2.0.2
+pymongo==3.0.2
+pyparsing==2.0.3
+pytest==2.7.1
+pytest-flask==0.8.1
+python-bcrypt==0.3.1
+python-dateutil==2.4.2
+pytz==2015.4
+pyzmq==14.6.0
+requests==2.7.0
+six==1.9.0
+SQLAlchemy==0.9.8
+tornado==4.2
+waitress==0.8.9
+webassets==0.10.1
+WebOb==1.4.1
+WebTest==2.0.18
+Werkzeug==0.10.4
+WTForms==2.0.2
